Update index.html SEARCH

--- a/Home/templates/index.html
+++ b/Home/templates/index.html
@@ -142,7 +142,7 @@
     <div class="search-form">
         <form action="{% url 'homepage' %}" method="GET">
             <input class="search-input" id="query_name" type="text" name="query_name" placeholder="Search...">
-            <button class="search-submit" type="submit">Search</button>
+            <button class="search-submit" type="submit">SEARCH</button>
         </form>
     </div>
 
